<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.xwc.tutorapp.Controllers.MainActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:textSize="36sp"
        android:textStyle="bold"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="8dp"
        app:layout_constraintHorizontal_bias="0.502"/>

    <Button
        android:textColor="#ffff"
        android:background="@drawable/gradient_lightrose"
        android:id="@+id/nameGame"
        android:layout_width="282dp"
        android:layout_height="73dp"
        android:text="@string/the_name_game"
        android:textSize="24sp"
        android:textStyle="bold"
        android:layout_marginTop="15dp"
        app:layout_constraintTop_toBottomOf="@+id/student"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent" />

    <Button
        android:textColor="#ffff"
        android:background="@drawable/gradient_lightrose"
        android:id="@+id/student"
        android:layout_width="277dp"
        android:layout_height="79dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="17dp"
        android:text="@string/find_student"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/classes"
        app:layout_constraintHorizontal_bias="0.505" />

    <Button
        android:textColor="#ffff"
        android:background="@drawable/gradient_lightrose"
        android:id="@+id/classes"
        android:layout_width="279dp"
        android:layout_height="83dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:text="@string/view_classes"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintHorizontal_bias="0.505"
        android:layout_marginTop="21dp"
        app:layout_constraintTop_toBottomOf="@+id/imageView4"/>

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="181dp"
        android:layout_height="222dp"
        app:srcCompat="@drawable/tutor"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"/>

</android.support.constraint.ConstraintLayout>
