<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.xwc.tutorapp.Controllers.ClassMenu">

    <TextView
        android:id="@+id/ClassName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="127dp"
        android:layout_marginTop="16dp"
        android:text="Class Name"
        android:textAlignment="center"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <Button
        android:background="@drawable/gradient_lightrose"
        android:textColor="#ffff"
        android:id="@+id/rollHistory"
        android:layout_width="257dp"
        android:layout_height="79dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="79dp"
        android:text="@string/view_roll_history"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ClassName" />

    <Button
        android:background="@drawable/gradient_lightrose"
        android:textColor="#ffff"
        android:id="@+id/newTut"
        android:layout_width="254dp"
        android:layout_height="73dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="54dp"
        android:text="@string/start_a_new_tutorial"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/rollHistory" />

    <Button
        android:background="@drawable/gradient_lightrose"
        android:textColor="#ffff"
        android:id="@+id/editClass"
        android:layout_width="254dp"
        android:layout_height="74dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="54dp"
        android:text="@string/edit_class"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/newTut"
        app:layout_constraintHorizontal_bias="0.504" />

</android.support.constraint.ConstraintLayout>

